[package]
name = "vu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
biquad = "0.4.2"
cpal = "0.15.3"
femtovg = "0.9.2"
glutin = "0.32.0"
glutin-winit = "0.5.0"
instant = { version = "0.1.13", features = ["now"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.2"
resource = "0.5.0"
usvg = "0.43.0"
winit = "0.30.5"
